chore: recompute HTML

--- a/assets/textView_HTML/dignaga_alambanapariksavrtti.html
+++ b/assets/textView_HTML/dignaga_alambanapariksavrtti.html
@@ -1,82 +1,82 @@
-<div><h1 id='ālambanaparīkṣāvṛtti'>ālambanaparīkṣāvṛtti</h1>
+<div class='content'><h2 id='ālambanaparīkṣāvṛtti'>ālambanaparīkṣāvṛtti</h2>
 
-<03>
+<p>&lt;03&gt;</p>
 
-<ālambanaparīkṣāvṛttiḥ ācāryadiṅnāgakṛtā>
+<p>&lt;ālambanaparīkṣāvṛttiḥ ācāryadiṅnāgakṛtā&gt;</p>
 
-<namaḥ sarvabuddhabodhisattvebhyaḥ>
+<p>&lt;namaḥ sarvabuddhabodhisattvebhyaḥ&gt;</p>
 
-<h2 id='3,4'>3,4 <small><small>(<a href='docExplore?doc_id=AP_3,4'>AP_3,4</a>)</small></small></h2>
+<h3 id='3,4'>3,4 <small>(<a href='docExplore?doc_id=ĀP_3,4'>ĀP_3,4</a>)</small></h3>
 
-ye cakṣurādijñānasyālambanaṃ bāhyārtho 'stītīcchanti । nanu te kalpayanti paramāṇūn, tatkāraṇatvāt 〈jñānasya〉 । saṃghātaṃ vā tadābhajñānasya jāyamānatvāt । tatra tāvat
-	yadyapīndriyavijñaptergrāhyāṃśaḥ kāraṇaṃ bhavet /
-	atadābhatayā tasyā nākṣavadviṣayaḥ sa tu // 1 //
-viṣaya iti । jñānena svarūpa〈m eva〉 nirdhāryate । tadākāratayā jāyamānatvāt । yadyapyaṇavaḥ tatkāraṇam । tathāpi na tādṛśāḥ akṣavat । evañca nāṇavastāvadālambanam ।
+<p>ye cakṣurādijñānasyālambanaṃ bāhyārtho 'stītīcchanti । nanu te kalpayanti paramāṇūn, tatkāraṇatvāt 〈jñānasya〉 । saṃghātaṃ vā tadābhajñānasya jāyamānatvāt । tatra tāvat</p>
+<p class='l'>	yadyapīndriyavijñaptergrāhyāṃśaḥ kāraṇaṃ bhavet /</p>
+<p class='l'>	atadābhatayā tasyā nākṣavadviṣayaḥ sa tu // 1 //</p>
+<p>viṣaya iti । jñānena svarūpa〈m eva〉 nirdhāryate । tadākāratayā jāyamānatvāt । yadyapyaṇavaḥ tatkāraṇam । tathāpi na tādṛśāḥ akṣavat । evañca nāṇavastāvadālambanam ।</p>
 
-<h2 id='3,11'>3,11 <small><small>(<a href='docExplore?doc_id=AP_3,11'>AP_3,11</a>)</small></small></h2>
+<h3 id='3,11'>3,11 <small>(<a href='docExplore?doc_id=ĀP_3,11'>ĀP_3,11</a>)</small></h3>
 
-saṃghātastu tadābhatve 'pi 〈jñānasya nālambanam । yataḥ〉
-<04>
-	yadābhāsā na tasmātsā	...
-yo 'rthaḥ svāvabhāsivijñaptimutpādayati sa hyālambanaṃ yujyate । yataḥ sa eva hyutpattipratyaya ucyate । saṃghātastu naivam ।
-							... dravyābhāvād dvicandravat /
-indriyavaikalyāt dvicandradarśanasya tadābhatve 'pi na tasya viṣayo 'sti । tadvat saṃghātaḥ dravyato 'sattvena akāraṇatvāt nālambanam ।
-	evaṃ bāhyadvayañcaiva na yuktaṃ matigocaraḥ // 2 //
-aṇuḥ kalāpaśceti bāhyo 'rthaḥ nālambanam, ekāṅgavaikalyāt । 
+<p>saṃghātastu tadābhatve 'pi 〈jñānasya nālambanam । yataḥ〉</p>
+<p>&lt;04&gt;</p>
+<p class='l'>	yadābhāsā na tasmātsā	...</p>
+<p>yo 'rthaḥ svāvabhāsivijñaptimutpādayati sa hyālambanaṃ yujyate । yataḥ sa eva hyutpattipratyaya ucyate । saṃghātastu naivam ।</p>
+<p class='l'>							... dravyābhāvād dvicandravat /</p>
+<p>indriyavaikalyāt dvicandradarśanasya tadābhatve 'pi na tasya viṣayo 'sti । tadvat saṃghātaḥ dravyato 'sattvena akāraṇatvāt nālambanam ।</p>
+<p class='l'>	evaṃ bāhyadvayañcaiva na yuktaṃ matigocaraḥ // 2 //</p>
+<p>aṇuḥ kalāpaśceti bāhyo 'rthaḥ nālambanam, ekāṅgavaikalyāt । </p>
 
-<h2 id='4,8'>4,8 <small><small>(<a href='docExplore?doc_id=AP_4,8'>AP_4,8</a>)</small></small></h2>
+<h3 id='4,8'>4,8 <small>(<a href='docExplore?doc_id=ĀP_4,8'>ĀP_4,8</a>)</small></h3>
 
-tatra 
-	sādhanaṃ sañcitākāramicchanti kila kecana /
-sarvo 'rtho bahvākāraḥ ataḥ tatra kenacidākāreṇa pratyakṣa iṣyate । paramāṇuṣvapyasti sañcitābhajñānotpattikāraṇabhāvaḥ ।
-	aṇvākāro na vijñapterarthaḥ kaṭhinatādivat // 3 //
-<05>
-yathā kaṭhinatādi vidyamānamapi na cākṣuṣabuddhiviṣayaḥ । evamanutvamapi ।
+<p>tatra </p>
+<p class='l'>	sādhanaṃ sañcitākāramicchanti kila kecana /</p>
+<p>sarvo 'rtho bahvākāraḥ ataḥ tatra kenacidākāreṇa pratyakṣa iṣyate । paramāṇuṣvapyasti sañcitābhajñānotpattikāraṇabhāvaḥ ।</p>
+<p class='l'>	aṇvākāro na vijñapterarthaḥ kaṭhinatādivat // 3 //</p>
+<p>&lt;05&gt;</p>
+<p>yathā kaṭhinatādi vidyamānamapi na cākṣuṣabuddhiviṣayaḥ । evamanutvamapi ।</p>
 
-<h2 id='5,2'>5,2 <small><small>(<a href='docExplore?doc_id=AP_5,2'>AP_5,2</a>)</small></small></h2>
+<h3 id='5,2'>5,2 <small>(<a href='docExplore?doc_id=ĀP_5,2'>ĀP_5,2</a>)</small></h3>
 
-	bhavedghaṭaśarāvādestathā sati samā matiḥ /
-ghaṭaśarāvādiparamāṇuṣu bahuṣvapi na ko 'pi viśeṣo 'sti ।
-	ākārabhedādbhedaścet	...
-yadi manyase grīvādyākāraḥ viśeṣakriyā, yena buddherviśeṣaṇamupādhirbhavet । iti । ayamupādhirghaṭādāvasti ।
-							... nāsti tu dravyasatyaṇau // 4 //
-	pramāṇabhedābhāvāt saḥ	...
-paramāṇuṣu dravyāntareṣvapi pārimāṇḍalye bhedo nāsti ।
-							... adravye 'sti tataḥ sa hi /
-ākārabhedaḥ saṃvṛtisatsvevāsti na tu paramāṇuṣu । ghaṭādayaśca saṃvṛtisanta eva ।
+<p class='l'>	bhavedghaṭaśarāvādestathā sati samā matiḥ /</p>
+<p>ghaṭaśarāvādiparamāṇuṣu bahuṣvapi na ko 'pi viśeṣo 'sti ।</p>
+<p class='l'>	ākārabhedādbhedaścet	...</p>
+<p>yadi manyase grīvādyākāraḥ viśeṣakriyā, yena buddherviśeṣaṇamupādhirbhavet । iti । ayamupādhirghaṭādāvasti ।</p>
+<p class='l'>							... nāsti tu dravyasatyaṇau // 4 //</p>
+<p class='l'>	pramāṇabhedābhāvāt saḥ	...</p>
+<p>paramāṇuṣu dravyāntareṣvapi pārimāṇḍalye bhedo nāsti ।</p>
+<p class='l'>							... adravye 'sti tataḥ sa hi /</p>
+<p>ākārabhedaḥ saṃvṛtisatsvevāsti na tu paramāṇuṣu । ghaṭādayaśca saṃvṛtisanta eva ।</p>
 
-<h2 id='5,14'>5,14 <small><small>(<a href='docExplore?doc_id=AP_5,14_5,17'>AP_5,14_5,17</a>)</small></small></h2>
+<h3 id='5,14'>5,14 <small>(<a href='docExplore?doc_id=ĀP_5,14_5,17'>ĀP_5,14_5,17</a>)</small></h3>
 
-	aṇūnāṃ parihāre hi tadābhajñānaviplavāt // 5 //
-dravyasatsu apanītasambandhiṣvapi 〈nīla〉varṇādivat svabuddhirna tyajyate । tathā sati indriyabuddhīnāṃ viṣayo bahirnāstītyupapadyate ।
+<p class='l'>	aṇūnāṃ parihāre hi tadābhajñānaviplavāt // 5 //</p>
+<p>dravyasatsu apanītasambandhiṣvapi 〈nīla〉varṇādivat svabuddhirna tyajyate । tathā sati indriyabuddhīnāṃ viṣayo bahirnāstītyupapadyate ।</p>
 
-<h2 id='5,17'>5,17 <small><small></small></small></h2>
+<h3 id='5,17'>5,17 <small></small></h3>
 
-	yadantarheyarūpaṃ tu bahirvadavabhāsate /
-	so 'rthaḥ	...
-<06>
-bāhyārthe 'vidyamāne antassadeva bahirvadavabhāsanamālambanapratyayaḥ ।
-				... vijñānarūpatvāttatpratyayatayāpi ca // 6 //
-antarvijñānamarthatayāvabhāsate tato utpadyate ceti dharmatādvayaviśiṣṭamityataḥ antassadevālambanapratyayaḥ ।
+<p class='l'>	yadantarheyarūpaṃ tu bahirvadavabhāsate /</p>
+<p class='l'>	so 'rthaḥ	...</p>
+<p>&lt;06&gt;</p>
+<p>bāhyārthe 'vidyamāne antassadeva bahirvadavabhāsanamālambanapratyayaḥ ।</p>
+<p class='l'>				... vijñānarūpatvāttatpratyayatayāpi ca // 6 //</p>
+<p>antarvijñānamarthatayāvabhāsate tato utpadyate ceti dharmatādvayaviśiṣṭamityataḥ antassadevālambanapratyayaḥ ।</p>
 
-<h2 id='6,5'>6,5 <small><small>(<a href='docExplore?doc_id=AP_6,5'>AP_6,5</a>)</small></small></h2>
+<h3 id='6,5'>6,5 <small>(<a href='docExplore?doc_id=ĀP_6,5'>ĀP_6,5</a>)</small></h3>
 
-yadi tāvadevamavabhāsa eva vedyate । kathaṃ tadekadeśaḥ sahajātaḥ pratyayaḥ ।
-	ekāṃśaḥ pratyayo 'vītāt	...
-sahabhūto 'pi avyabhicārāt anyajātasya pratyayo bhavati । naiyāyikāstu evamāhuḥ । krameṇa jāyamānayorhetuhetumatoḥ bhavābhāvatadvattā lakṣaṇamiti । athavā
-							... śaktyarpaṇāt krameṇa 〈vā〉 /
-krameṇāpi so 'rthāvabhāsaḥ svānurūpakāryotpattaye śaktiṃ vijñānādhārāṃ karotītyavirodhaḥ ।
+<p>yadi tāvadevamavabhāsa eva vedyate । kathaṃ tadekadeśaḥ sahajātaḥ pratyayaḥ ।</p>
+<p class='l'>	ekāṃśaḥ pratyayo 'vītāt	...</p>
+<p>sahabhūto 'pi avyabhicārāt anyajātasya pratyayo bhavati । naiyāyikāstu evamāhuḥ । krameṇa jāyamānayorhetuhetumatoḥ bhavābhāvatadvattā lakṣaṇamiti । athavā</p>
+<p class='l'>							... śaktyarpaṇāt krameṇa 〈vā〉 /</p>
+<p>krameṇāpi so 'rthāvabhāsaḥ svānurūpakāryotpattaye śaktiṃ vijñānādhārāṃ karotītyavirodhaḥ ।</p>
 
-<h2 id='6,13'>6,13 <small><small>(<a href='docExplore?doc_id=AP_6,13'>AP_6,13</a>)</small></small></h2>
+<h3 id='6,13'>6,13 <small>(<a href='docExplore?doc_id=ĀP_6,13'>ĀP_6,13</a>)</small></h3>
 
-yadi tarhi svarūpamevālambanapratyayaḥ । kathaṃ tat 〈rūpaṃ〉 cakṣuścopādāya cakṣurvijñānamutpadyate 〈iti〉 ।
-<07>
-	sahakārivaśādyaddhi śaktirūpaṃ 〈tat〉 indriyam // 7 //
-indriyaṃ svakāryāt śaktirūpamevānumīyate na tu bhautikam ।
-	sā cāviruddhā vijñapteḥ	...
-śaktistu vijñāne vāstu । anirdeśye svasya rūpe vāstu kāryotpattau na viśeṣaḥ ।
-							... evaṃ viṣayarūpakam /
-	pravartete 'nādikālaṃ śaktiścānyonyahetuke // 8 //
-cakṣurākhyāṃ śaktimantaḥ rūpañcopādāya vijñānamarthāvabhāsi ālambanādavibhaktamutpadyate । idaṃ dvayamapi anādikālamanyonyahetukam । kadācit vijñānasya śaktiparipākāt viṣayākāratā bhavati । kadācicca tadākāraśaktiḥ । vijñānaṃ sā ca ubhayamanyatvenānanyatvena ca yatheṣṭamucyatām । evamantarālambanaṃ dharmatādvayaviśiṣṭatvāt viṣayatayā upapadyate ।
+<p>yadi tarhi svarūpamevālambanapratyayaḥ । kathaṃ tat 〈rūpaṃ〉 cakṣuścopādāya cakṣurvijñānamutpadyate 〈iti〉 ।</p>
+<p>&lt;07&gt;</p>
+<p class='l'>	sahakārivaśādyaddhi śaktirūpaṃ 〈tat〉 indriyam // 7 //</p>
+<p>indriyaṃ svakāryāt śaktirūpamevānumīyate na tu bhautikam ।</p>
+<p class='l'>	sā cāviruddhā vijñapteḥ	...</p>
+<p>śaktistu vijñāne vāstu । anirdeśye svasya rūpe vāstu kāryotpattau na viśeṣaḥ ।</p>
+<p class='l'>							... evaṃ viṣayarūpakam /</p>
+<p class='l'>	pravartete 'nādikālaṃ śaktiścānyonyahetuke // 8 //</p>
+<p>cakṣurākhyāṃ śaktimantaḥ rūpañcopādāya vijñānamarthāvabhāsi ālambanādavibhaktamutpadyate । idaṃ dvayamapi anādikālamanyonyahetukam । kadācit vijñānasya śaktiparipākāt viṣayākāratā bhavati । kadācicca tadākāraśaktiḥ । vijñānaṃ sā ca ubhayamanyatvenānanyatvena ca yatheṣṭamucyatām । evamantarālambanaṃ dharmatādvayaviśiṣṭatvāt viṣayatayā upapadyate ।</p>
 
-<ityācāryadiṅnāgakṛtā ālambanaparīkṣāvṛttiḥ samāptā></div>
+&lt;ityācāryadiṅnāgakṛtā ālambanaparīkṣāvṛttiḥ samāptā&gt;</div>
